Freedom Sanbox Ant Deploy/src/objects/SyncDeletedRecords__c.object
<CustomObject>
    <description>it Contain all deleted records</description>
    <fields>
        <fullName>IsConvertedLead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to detect the converted leads which should be then marked converted in Portal</description>
        <label>IsConvertedLead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>check that it is synced with portal or not</description>
        <label>Is_Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SObjectType__c</fullName>
        <label>SObjectType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sobject_ID__c</fullName>
        <label>Sobject_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sobject_Name__c</fullName>
        <label>Sobject_Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_DataTime__c</fullName>
        <description>same as last Modified datetime</description>
        <label>Sync_DataTime</label>
        <type>DateTime</type>
    </fields>
    <label>SyncDeletedRecord</label>
    <nameField>
        <displayFormat>SDR-{0000}</displayFormat>
        <label>SyncDeletedRecordsID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SyncDeletedRecords</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>